--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/zettacamp-dewi-ramadhani/safira_zettacamp_catfish#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20"
   }
 }
