--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "apollo-server-express": "^3.10.4",
     "body-parser": "^1.20.1",
+    "dataloader": "^2.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
