--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@graphql-tools/schema": "^9.0.9",
+    "apollo-error": "^1.0.2",
+    "apollo-server-errors": "^3.3.1",
     "apollo-server-express": "^3.11.1",
     "dataloader": "^2.1.0",
     "express": "^4.18.2",
