--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-error": "^1.0.2",
     "apollo-server-errors": "^3.3.1",
     "apollo-server-express": "^3.11.1",
+    "bcryptjs": "^2.4.3",
     "dataloader": "^2.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
@@ -19,7 +20,6 @@
     "mongoose": "^5.13.15",
     "nodemon": "^2.0.20"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
