--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.20"
   },
   "scripts": {
